src/test/resources/Parser/SyntaxErrors/TooManyArgumentsAssign.front
class A:
    f() {
        i : int64, j : int32 = 4,2,0;
    }